// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> that renders a button should add classes when props are changed 1`] = `
<div>
  <button
    class="Button Button--isBlock Button--isLoading Button--size_large Button--variant_filled Button--context_primary"
    disabled=""
    type="button"
  >
    <div
      aria-busy="true"
      aria-hidden="false"
      class="LoadingSpinner"
      role="status"
    >
      <svg
        class="LoadingSpinner__svg"
        style="width: 16px; height: 16px;"
        viewBox="0,0,44,44"
      >
        <circle
          class="LoadingSpinner__path LoadingSpinner__path--context_inverted"
          cx="22"
          cy="22"
          fill="none"
          r="20"
          stroke-width="4"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`<Button> that renders a button should render an ancor element if href is defined 1`] = `
<div>
  <a
    class="Button Button--variant_filled Button--context_secondary"
    href="/"
  >
    Click me
  </a>
</div>
`;

exports[`<Button> that renders a button should render default button correctly 1`] = `
<div>
  <button
    class="Button Button--variant_filled Button--context_secondary"
    type="button"
  >
    Click me
  </button>
</div>
`;
